# discord-typings

./: .flake8  .isort.cfg  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: import.yml  lint.yml
code_gen/: _base.py  _config.py  _schemas.py
discord_typing/: __init__.py  events.py  gateway.py
discord_typings/: __init__.py  _gateway.py  _models.py  _oauth.py  _reference.py  gateway.py  oauth.py  shared.py
discord_typings/_events/: _gateway.py  _webhook.py
discord_typings/_interactions/: __init__.py  _commands.py  _components.py  _receiving.py
discord_typings/_monetization/: _entitlements.py
discord_typings/_resources/: __init__.py  _application.py  _audit_log.py  _auto_moderation.py  _channel.py  _emoji.py  _guild.py  _guild_scheduled_events.py  _guild_template.py  _invite.py  _polls.py  _role_connection_metadata.py  _skus.py  _soundboard.py  _stage_instance.py  _sticker.py  _subscription.py  _user.py  _voice.py  _webhook.py
discord_typings/interactions/: __init__.py  commands.py  components.py  receiving.py
discord_typings/resources/: __init__.py  application.py  audit_log.py  auto_moderation.py  channel.py  emoji.py  guild.py  guild_scheduled_events.py  guild_template.py  invite.py  stage_instance.py  sticker.py  user.py  voice.py  webhook.py
