[project]
name = "discord-typings"
version = "0.4.0"
description = "Maintained typings of payloads that Discord sends"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Bluenix", email = "bluenixdev@gmail.com"}]

keywords = [
    "discord", "discord-api", "discord-api-wrapper", "python-3", "typing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Generic TypedDicts were first added in 4.3, but possible on Python 3.9 and
# 3.10 back in 4.2
dependencies = ["typing_extensions >= 4.3, <5"]

[project.urls]
Homepage = "https://github.com/Bluenix2/discord-typings/"
Repository = "https://github.com/Bluenix2/discord-typings/"

[build-system]
requires = ["flit_core >=3.5, <4"]
build-backend = "flit_core.buildapi"

[tool.flit]
module = {name = "discord_typings"}
